service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: "valerym1/service-a:0.1.3"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8081
          name: mgmt
          protocol: TCP        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme:
              HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme:
              HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 1
          periodSeconds:  20
          failureThreshold: 3
          successThreshold: 1

---
apiVersion: v1
kind: Service
metadata:
  name: service-a  
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: mgmt
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: service-a
